implementacion reglas de negocio para reserva, creacion de querys necesarias

--- a/microservicio/dominio/build.gradle
+++ b/microservicio/dominio/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	testImplementation project(':comun:comun-test')
 
 	implementation project(':comun:comun-dominio')
+	implementation project.ext.springtxt
 
 	compileOnly project.ext.lombok
 	annotationProcessor project.ext.lombok
