--- a/microservicio/infraestructura/build.gradle
+++ b/microservicio/infraestructura/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
 	implementation project(':comun:comun-infraestructura')
 	implementation project(':comun:comun-aplicacion')
+	implementation project(':comun:comun-dominio')
 }
 
 jacocoTestReport {
