--- a/microservicio/build.gradle
+++ b/microservicio/build.gradle
@@ -52,6 +52,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'war'
 
 group = 'com.ceiba'
 version = '0.0.1-SNAPSHOT'
